subcommand/sds-server/testdata/static_secrets.json
{
  "ca_cert": {
    "cert":"-----BEGIN CERTIFICATE-----\nMIIB3DCCAYKgAwIBAgIIKHVsXbkKc9QwCgYIKoZIzj0EAwIwFDESMBAGA1UEAxMJ\nVGVzdCBDQSAxMB4XDTIwMDYxOTE1MzYyOFoXDTMwMDYxOTE1MzYyOFowFDESMBAG\nA1UEAxMJVGVzdCBDQSAxMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEOJHVOIpb\nrlouD7oJEIkWAZivVQUxctyhA3MH920y3xfcOw0Ffb1QNFiq2JQjrivu8SF7JkqD\nYv39+Nxvr8XWO6OBvTCBujAOBgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB\n/zApBgNVHQ4EIgQgBSgJK3BHTI6VuN+LxiXokORQ9T08pzv/efcvOhS3hcwwKwYD\nVR0jBCQwIoAgBSgJK3BHTI6VuN+LxiXokORQ9T08pzv/efcvOhS3hcwwPwYDVR0 [...]
    "key": ""
  },
  "leaf_cert": {
    "key": "-----BEGIN EC PRIVATE KEY-----\nMHcCAQEEILvaC5UUMAlfPc7NsuOrcmedxYRswvuWBOAQXjONsOAnoAoGCCqGSM49\nAwEHoUQDQgAEZQGCVuHeF90ZY0Gt+MkgFKLB7ialW2tCrCw0mJgy6xcMW9oaltUw\neRzZee+x5XJcRnz1knBTufohpmyBOSsslA==\n-----END EC PRIVATE KEY-----",
    "cert": "-----BEGIN CERTIFICATE-----\nMIICKDCCAc6gAwIBAgIIQ/eA12vrWr0wCgYIKoZIzj0EAwIwFDESMBAGA1UEAxMJ\nVGVzdCBDQSAxMB4XDTIwMDYxOTE1MzYyOFoXDTMwMDYxOTE1MzYyOFowKjEoMCYG\nA1UEAxMfd2ViLnN2Yy5kZWZhdWx0LjExMTExMTExLmNvbnN1bDBZMBMGByqGSM49\nAgEGCCqGSM49AwEHA0IABGUBglbh3hfdGWNBrfjJIBSiwe4mpVtrQqwsNJiYMusX\nDFvaGpbVMHkc2XnvseVyXEZ89ZJwU7n6IaZsgTkrLJSjgfMwgfAwDgYDVR0PAQH/\nBAQDAgO4MB0GA1UdJQQWMBQGCCsGAQUFBwMCBggrBgEFBQcDATAMBgNVHRMBAf8E\nAjAAMCkGA1UdDgQiBCCevcC+OkyrME7qqqdwiBhKwv/ScAMPjXZ4Kdl++fwPjD [...]
  }
}
